--- a/Projects/Project Number 1/landingPageNumber1.html
+++ b/Projects/Project Number 1/landingPageNumber1.html
@@ -16,17 +16,17 @@
             <form class="form-container-in">
                 <div class="form-control-1">
                     <h3 id="form-headline">תן לנו להוביל אותך קדימה</h3>
-                    <p id="form-paragraph">בחברה שלנו תוכל להנות משלל הטבות והנחות, רק הכי חשוב למלא את הפרטים שלך קודם
-                        :
+                    <p id="form-paragraph">לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום” בעת
+                עריכ.
                     </p>
                 </div>
                 <div class="form-control-2">
                     <label class="label">שם מלא :</label>
-                    <input class="input" placeholder=" ישראל ישראלי "></input>
+                    <input class="input" ></input>
                 </div>
                 <div class="form-control-2">
                     <label class="label">דוא"ל :</label>
-                    <input class="input" placeholder="Israel@gmail.com"></input>
+                    <input class="input" ></input>
                 </div>
                 <div class="button">
                     <button id="btn">שליחה</button>
