--- a/Projects/Project Number 3/landingPageNumber3.html
+++ b/Projects/Project Number 3/landingPageNumber3.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <div class="img-container">
-            <img src="images/Coffee.png" alt="project-img">
+            <img src="Images/Coffee.png" alt="project-img">
         </div>
 
         <div class="form-container">
