--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
                             style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title" id="pj1title">Project Number 1</h4>
-                            <p class="card-text" id="pj1text">Lorem Ipsum is simply dummy text of the printing and
-                                typesetting
-                                industry.
+                            <p class="card-text" id="pj1text">The project was assigned as part of the course. The design
+                                was provided in Adobe XD, and we were required to code the
+                                landing page.<br>
+                                Technologies I used: CSS, HTML.
                             </p>
                             <div class="text-center">
                                 <a href="project1.html" class="btn btn-success myLink" id="pj1link">Link</a>
@@ -240,9 +241,11 @@
                             style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title" id="pj2title">Project Number 2</h4>
-                            <p class="card-text" id="pj2text">Lorem Ipsum is simply dummy text of the printing and
-                                typesetting
-                                industry.
+                            <p class="card-text" id="pj2text">The project was assigned as part of the course. The design
+                                was provided in Adobe XD, and we were required to code the
+                                landing page.<br>
+                                Technologies I used: CSS, HTML.
+
                             </p>
                             <div class="text-center">
                                 <a href="project2.html" class="btn btn-success myLink" id="pj2link">Link</a>
@@ -257,9 +260,10 @@
                             style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title" id="pj3title">Project Number 3</h4>
-                            <p class="card-text" id="pj3text">Lorem Ipsum is simply dummy text of the printing and
-                                typesetting
-                                industry.
+                            <p class="card-text" id="pj3text">The project was assigned as part of the course. The design
+                                was provided in Adobe XD, and we were required to code the
+                                landing page.<br>
+                                Technologies I used: CSS, HTML.
                             </p>
                             <div class="text-center">
                                 <a href="project3.html" class="btn btn-success myLink" id="pj3link">Link</a>
@@ -276,9 +280,10 @@
                             style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title" id="pj4title">Project Number 4</h4>
-                            <p class="card-text" id="pj4text">Lorem Ipsum is simply dummy text of the printing and
-                                typesetting
-                                industry.
+                            <p class="card-text" id="pj4text">The project was assigned as part of the course. The design
+                                was provided in Adobe XD, and we were required to code the
+                                landing page.<br>
+                                Technologies I used: CSS, HTML.
                             </p>
                             <div class="text-center">
                                 <a href="project4.html" class="btn btn-success myLink" id="pj4link">Link</a>
@@ -293,9 +298,10 @@
                             style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title" id="pj5title">Project Number 5</h4>
-                            <p class="card-text" id="pj5text">Lorem Ipsum is simply dummy text of the printing and
-                                typesetting
-                                industry.
+                            <p class="card-text" id="pj5text">The project was assigned as part of the course. The design
+                                was provided in Adobe XD, and we were required to code the
+                                landing page.<br>
+                                Technologies I used: CSS, HTML, Bootstrap.
                             </p>
                             <div class="text-center">
                                 <a href="project5.html" class="btn btn-success myLink" id="pj5link">Link</a>
@@ -310,9 +316,10 @@
                             style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title" id="pj6title">Project Number 6</h4>
-                            <p class="card-text" id="pj6text">Lorem Ipsum is simply dummy text of the printing and
-                                typesetting
-                                industry.
+                            <p class="card-text" id="pj6text">The project was assigned as part of the course. The design
+                                was provided in Adobe XD, and we were required to code the
+                                landing page.<br>
+                                Technologies I used: CSS, HTML.
                             </p>
                             <div class="text-center">
                                 <a href="project6.html" class="btn btn-success myLink" id="pj6link">Link</a>
