--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                     <form method="POST" name="Contact">
                         <input type="text" name="uname" class="form-control form-control-lg" required
                             placeholder="Name">
-                        <input type="email" name="umail" class="form-control mt-3" required placeholder="Email">
+                        <input type="email" name="umail" class="form-control mt-3" required placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" title="Please enter a valid email address">
                         <input type="text" name="usubject" class="form-control mt-3" placeholder="Subject">
                         <div class="mb-3 mt-3">
                             <textarea class="form-control" name="udetails" rows="5" id="comment" name="text" required
